--- a/flask-hello-world-web.yaml
+++ b/flask-hello-world-web.yaml
@@ -13,16 +13,10 @@ spec:
   replicas: 1
   template:
     metadata:
-
       labels:
         app: flask-hello-world-web
-        foo: bar
-
       annotations:
         sidecar.istio.io/inject: "false"
-        author: fabian lee
-        blog: https://fabianlee.org
-
     spec:
 
       # scaled up deployment will go to different nodes
@@ -37,37 +31,6 @@ spec:
                 - flask-hello-world-web
             topologyKey: "kubernetes.io/hostname"
 
-      volumes:
-        - name: podinfo
-          # these are *only* available through env vars, and not volume mount
-          # status.podIP, spec.serviceAccountName, spec.nodeName, status.hostIP
-          downwardAPI:
-            items:
-              # pulling pod fields, fieldRef
-              - path: "name"
-                fieldRef:
-                  fieldPath: metadata.name
-              - path: "namespace"
-                fieldRef:
-                  fieldPath: metadata.namespace
-              - path: "labels"
-                fieldRef:
-                  fieldPath: metadata.labels
-              - path: "annotations"
-                fieldRef:
-                  fieldPath: metadata.annotations
-              # pulling container fields, resourceFieldRef
-              - path: "mem_limit"
-                resourceFieldRef:
-                  containerName: flask-hello-world-web
-                  resource: limits.memory
-                  divisor: 1Mi
-              - path: "mem_request"
-                resourceFieldRef:
-                  containerName: flask-hello-world-web
-                  resource: requests.memory
-                  divisor: 1Mi
-
       containers:
       - name: flask-hello-world-web
         image: fabianlee/docker-flask-hello-world-web:1.0.0
@@ -81,68 +44,21 @@ spec:
             memory: "128Mi"
             cpu: "1000m" # one vcpu
 
-        # mount for Downward files
-        volumeMounts:
-          - name: podinfo
-            mountPath: /etc/podinfo
-
         env:
 
-        # default variables available to be overridden
+        # 404 if request not to this context
         - name: APP_CONTEXT
-          # 404 if request not to this context
           value: "/flask-hello/"
+
+        # default message
+        - name: MESSAGE_TO
+          value: "World"
+
+        # listening port
         - name: PORT
           value: "8000"
 
-        # Downward API support - inserts these into container as env variables
-        # pulling pod fields, fieldRef
-        - name: MY_POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: MY_POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
-        - name: MY_POD_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP
-        - name: MY_POD_SERVICE_ACCOUNT
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.serviceAccountName
-        - name: MY_NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
-
-        # can only pull single keys out of annotations and labels
-        # use volume mount if you want all
-        - name: MY_POD_LABEL_APP
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.labels['app']
-        - name: MY_POD_ANNOTATION_AUTHOR
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.annotations['author']
-
-        # pulling container fields, resourceFieldRef
-        - name: MY_POD_MEM_LIMIT_MB
-          valueFrom:
-            resourceFieldRef:
-              containerName: flask-hello-world-web
-              resource: limits.memory
-              divisor: 1Mi
-        - name: MY_POD_MEM_REQUEST_MB
-          valueFrom:
-            resourceFieldRef:
-              containerName: flask-hello-world-web
-              resource: requests.memory
-              divisor: 1Mi
-
+        # check for lifetime liveness, restarts if dead
         livenessProbe:
           httpGet:
             path: /healthz
@@ -150,6 +66,7 @@ spec:
           initialDelaySeconds: 3
           periodSeconds: 3
 
+        # check for initial readiness
         readinessProbe:
           httpGet:
             path: /healthz
